// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Accordion/Accordion Defaults smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAllColorVariants smoke-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_burgundy_1hopi_14 bottomSpacingXL">
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_denim_1hopi_8 bottomSpacingXL">
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_forest_1hopi_5 bottomSpacingXL">
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_graphite_1hopi_17 bottomSpacingXL">
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_ochre_1hopi_11 bottomSpacingXL">
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
            <p class="_subtitle_ihaf2_107">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
       id="htmlId"
       data-testid="123ID"
  >
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithIconLeft smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14 _header_iconLeft_ihaf2_67 _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_large_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_large_ihaf2_103">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_large_ihaf2_89">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_large_ihaf2_32 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithMedium smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithRef play-test 1`] = `
<div data-test-block="true">
  <div class
       id="dummyIdForwardedFromRef"
  >
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14  _header_medium_ihaf2_71"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76 _title_medium_ihaf2_100">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_ihaf2_80 _iconWrapper_medium_ihaf2_86">
            <svg class="_systemIcon_dry7n_2 _systemIcon_large_dry7n_15 _icon_ihaf2_18 _chevron_medium_ihaf2_29 _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithSmall smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_ihaf2_1">
      <div class="_tag_ihaf2_11">
        <button class="_header_ihaf2_14"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_ihaf2_76">
            <div class="_title_ihaf2_76">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_ihaf2_80">
            <svg class="_systemIcon_dry7n_2 _systemIcon_medium_dry7n_10 _icon_ihaf2_18  _chevron_closed_ihaf2_26"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_ihaf2_120">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;
